programs/tests/invalid_Programs/type-checker/inconsistent_connective.kln
function main():boolean
    3 or true
